<resources>
    <string name="app_name">咨路教育</string>

    <string name="main_menu_iteml1">发现</string>
    <string name="main_menu_iteml2">课程</string>
    <string name="main_menu_item1">首页</string>
    <string name="main_menu_item2">活动</string>
    <string name="main_menu_item3">tab3</string>
    <string name="main_menu_item4">我的</string>

    <string name="home_page">首页</string>
    <string name="login_title">登陆</string>
    <string name="register_title">注册</string>
    <string name="product_center_page">产品中心</string>
    <string name="talk_page">社区</string>
    <string name="order_page">订单</string>
    <string name="app_page">应用</string>
    <string name="user_center_page">个人</string>
    <string name="message_center">消息中心</string>
    <string name="bar_message">业务消息</string>
    <string name="system_message">系统消息</string>
    <string name="hello">Hello app!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">点击注册</string>
    <string name="register_quick">注册</string>
    <string name="next_step">下一步</string>
    <string name="register_name">全名</string>
    <string name="register_nickname">昵称</string>
    <string name="register_mail">邮箱地址</string>
    <string name="register_tel">手机</string>
    <string name="register_username_hint">手机号码</string>
    <string name="register_username">账号</string>
    <string name="register_password">密码</string>
    <string name="register_password2">确认密码</string>
    <string name="register_mail_hint">请输入邮箱地址</string>
    <string name="register_password_hint">请设置6-20位密码</string>
    <string name="register_confirm_password_hint">请设置6-20位密码</string>
    <string name="register_validate_code">请输入验证码</string>
    <string name="btn_get_pass">找回密码</string>
    <string name="get_pass_msg">密码已经发送到您的手机，请注意查收</string>
    <string name="bwl">备忘录</string>
    <string name="notification_msg">服务正在运行</string>
    <string name="hot_product">热销产品</string>
    <string name="register_name_warn">为您的账户安全填写一个手机号完成验证</string>
    <string name="register_msg_response">已向您的手机 TEL 发送了短信验证码,请及时查收验证。</string>
    <string name="register_text"><u>没有账号?</u></string>
    <string name="get_sms_code">获取验证码</string>
    <string name="reget_text">重新获取</string>

    <!-- 个人信息activity -->
    <string name="user_info">个人设置</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_age">请输入年龄</string>
    <string name="input_qq">请输入qq</string>
    <string name="input_introduce">请输入简介</string>
    <string name="input_email">请输入邮箱</string>
    <string name="check_is_show_mobile">显示手机</string>
    <string name="check_is_show_email">显示邮箱</string>
    <string name="check_is_show_qq">显示QQ</string>
    <string name="check_is_show_pl">是否显示评论</string>
    <string name="check_is_show_dz">是否显示点赞</string>
    <string name="check_is_show_sc">是否显示收藏</string>

    <!--系统设置activity-->
    <string name="system_settings">系统通知</string>
    <string name="using_feedback">使用反馈</string>
    <string name="function_outline">功能介绍</string>
    <string name="about_us">关于我们</string>
    <string name="service_protocal">服务协议</string>
    <string name="reset_password">重置密码</string>
    <string name="grade_mark">我要评分</string>
    <string name="log_out">退出登录</string>

    <!--使用反馈activity-->
    <string name="give_some_suggestion">请说说您的意见吧</string>
    <string name="send_feedback">发送</string>

</resources>
