<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/fragments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/menus"
            android:layout_alignParentTop="true"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/menus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_bottom_menus_height"
            android:layout_alignParentBottom="true"
            android:background="@color/lightgray"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiol1"
                    style="@style/MainActivityBottomMenuItem"
                    android:drawableTop="@drawable/base_radio_selector"
                    android:text="@string/main_menu_iteml1" />

                <RadioButton
                    android:id="@+id/radiol2"
                    style="@style/MainActivityBottomMenuItem"
                    android:drawableTop="@drawable/base_radio_selector"
                    android:text="@string/main_menu_iteml2" />


                <RadioButton
                    android:id="@+id/radioHome"
                    style="@style/MainActivityBottomMenuItem"
                    android:drawableTop="@drawable/base_radio_selector"
                    android:text="@string/main_menu_item1" />

                <RadioButton
                    android:id="@+id/radioActivities"
                    style="@style/MainActivityBottomMenuItem"
                    android:drawableTop="@drawable/base_radio_selector"
                    android:text="@string/main_menu_item2" />


                <RadioButton
                    android:visibility="gone"
                    android:id="@+id/radioSetting"
                    style="@style/MainActivityBottomMenuItem"
                    android:drawableTop="@drawable/base_radio_selector"
                    android:text="@string/main_menu_item4" />

            </RadioGroup>
        </LinearLayout>

    </RelativeLayout>
</merge>