<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input_shape"
                android:ems="10"
                android:hint="@string/register_username_hint"
                android:inputType="phone"
                android:padding="10dp">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_get_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_btn_selector"
                android:text="@string/btn_get_pass"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/msgText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/get_pass_msg"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</merge>